# terrain

./: Cargo.toml  README.md
src/: color.rs  gpu.rs  lib.rs  main.rs  noise.rs  pathing.rs  simulate.rs  utils.rs
src/shaders/: add.wgsl  colour.wgsl  contour.wgsl  flow.wgsl  gradient.wgsl  invert.wgsl  magnitude.wgsl  multiply.wgsl  normalise.wgsl  quantize.wgsl  simulation.wgsl  smooth.wgsl
